# ai-code-reviewer

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/code-reviewer/: index.html  package.json
artifacts/code-reviewer/.replit-artifact/: artifact.toml
python-backend/: ai_reviewer.py  ast_analyzer.py  code_reviews.db  database.py  main.py  rag_engine.py
python-frontend/: app.py
python-frontend/static/css/: style.css
python-frontend/static/js/: app.js
python-frontend/templates/: base.html  history.html  index.html  result.html
