[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "markdown2>=2.5.5",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.41.0",
]
